<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".RecipeActivity"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/PinaColadaPicture"
            android:layout_width="257dp"
            android:layout_height="240dp"
            android:contentDescription="Pina Colada Picture"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pina_colada" />

        <ImageView
            android:id="@+id/Share"
            android:layout_width="50dp"
            android:layout_height="67dp"
            app:layout_constraintBottom_toBottomOf="@+id/PinaColadaPicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toEndOf="@+id/PinaColadaPicture"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.361"
            app:srcCompat="@android:drawable/ic_menu_share"
            android:contentDescription="Share Button" />

        <ImageView
            android:id="@+id/Favourite"
            android:layout_width="50dp"
            android:layout_height="67dp"
            app:layout_constraintBottom_toBottomOf="@+id/PinaColadaPicture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toEndOf="@+id/PinaColadaPicture"
            app:layout_constraintTop_toBottomOf="@+id/Share"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:contentDescription="Favourite Button" />

        <TextView
            android:id="@+id/Description"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:text="@string/description_PC"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PinaColadaPicture" />

        <TextView
            android:id="@+id/Instructions"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:text="@string/Instructions_PC"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Description" />

        <TextView
            android:id="@+id/Equipment"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:text="@string/Equipment_PC"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Instructions" />

        <TextView
            android:id="@+id/Ingredients"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:text="@string/Ingredients_PC"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Equipment" />

        <TextView
            android:id="@+id/SubmitView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/submit_view"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Ingredients" />

        <RatingBar
            android:id="@+id/Rating"
            style="@style/customRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/SubmitView"
            app:layout_constraintTop_toBottomOf="@+id/Ingredients" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
